加入暂停重新开始等功能
UI component内添加的组件必须要dispose后自己删除 。不然不会释放。await 后需要判断组件是否还存在。

--- a/Unity/Unity.Editor.csproj
+++ b/Unity/Unity.Editor.csproj
@@ -395,6 +395,7 @@
     <Compile Include="Assets\ThirdParty\Protobuf\Editor\Protogen.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Games\HdFootball\Prefabs\readMe.txt" />
     <None Include="Assets\Plugins\DOTween\DOTween.XML" />
     <None Include="Assets\Plugins\DOTween\DOTween43.xml" />
     <None Include="Assets\Plugins\DOTween\DOTween46.xml" />
