--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\Temp\UnityVS_bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;ILRuntime</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -99,10 +99,13 @@
     <Compile Include="Module\HeadGame\UI\UIGame\Component\HG_BallControllerCp.cs" />
     <Compile Include="Module\HeadGame\UI\UIGame\Component\HG_CpuControllerCp.cs" />
     <Compile Include="Module\HeadGame\UI\UIGame\Component\HG_GameWarComponent.cs" />
+    <Compile Include="Module\HeadGame\UI\UIGame\Component\HG_PanelPauseCp.cs" />
     <Compile Include="Module\HeadGame\UI\UIGame\Component\HG_PlayerControllerCp.cs" />
     <Compile Include="Module\HeadGame\UI\UIGame\Component\HG_UIGameComponent.cs" />
+    <Compile Include="Module\HeadGame\UI\UIGame\Event\HG_InitSceneStart_ReStartWar.cs" />
     <Compile Include="Module\HeadGame\UI\UIGame\Event\HG_InitSceneStart_StartWar.cs" />
     <Compile Include="Module\HeadGame\UI\UIGame\Factory\HG_GameWarFactory.cs" />
+    <Compile Include="Module\HeadGame\UI\UIGame\Factory\HG_PausePanelFactory.cs" />
     <Compile Include="Module\HeadGame\UI\UIGame\Factory\HG_UIGameFactory.cs" />
     <Compile Include="Module\HeadGame\UI\UIMenu\Component\HG_UIMenuComponent.cs" />
     <Compile Include="Module\HeadGame\UI\UIMenu\Event\HG_InitSceneStart_StartGame.cs" />
