生成配置文件到HotFix 工程并添加到项目配置
在Unity.Hotfix.csproj文件内  <!--add auto createcs-->  之前插入 新生成的cs 文件

--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Base\Object\IStartSystem.cs" />
     <Compile Include="Module\FrameSync\OperaComponent.cs" />
     <Compile Include="Entity\Config\UnitConfig.cs" />
+    <!--add auto createcs-->
     <Compile Include="Module\FrameSync\TestHotfixSubscribMonoEvent_LogString.cs" />
     <Compile Include="Module\FrameSync\Actor_CreateUnitsHandler.cs" />
     <Compile Include="Module\FrameSync\Actor_TestHandler.cs" />
