--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -12,8 +12,8 @@
 
 	<targets>
 		<target name="trace" xsi:type="File"
-      openFileCacheTimeout="3600"
-      ConcurrentWrites="false"
+			openFileCacheTimeout="3600"
+			ConcurrentWrites="false"
 			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}/Trace/${shortdate}.log"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}" />
@@ -23,8 +23,8 @@
 	
 	<targets>
 		<target name="debug" xsi:type="File"
-      openFileCacheTimeout="3600"
-      ConcurrentWrites="false"
+			openFileCacheTimeout="3600"
+			ConcurrentWrites="false"
 			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}/Debug/${shortdate}.log"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
@@ -34,8 +34,8 @@
 
 	<targets>
 		<target name="info" xsi:type="File"
-      openFileCacheTimeout="3600"
-      ConcurrentWrites="false"
+			openFileCacheTimeout="3600"
+			ConcurrentWrites="false"
 			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}/Info/${shortdate}.log"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
@@ -45,8 +45,8 @@
 	
 	<targets>
 		<target name="error" xsi:type="File"
-      openFileCacheTimeout="3600"
-      ConcurrentWrites="false"
+			openFileCacheTimeout="3600"
+			ConcurrentWrites="false"
 			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}/Error/${shortdate}.log"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}" />
@@ -56,19 +56,19 @@
   
   <targets>
 		<target name="warn" xsi:type="File"
-      openFileCacheTimeout="3600"
-      ConcurrentWrites="false"
+			openFileCacheTimeout="3600"
+			ConcurrentWrites="false"
 			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}/Warning/${shortdate}.log"
 			deleteOldFileOnStartup="false"
-			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}" />
+			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message}" />
 		<target name="warnConsole" type="ColoredConsole"
-			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}" />
+			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message}" />
 	</targets>
   
   <targets>
 		<target name="fatal" xsi:type="File"
-      openFileCacheTimeout="3600"
-      ConcurrentWrites="false"
+			openFileCacheTimeout="3600"
+			ConcurrentWrites="false"
 			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}/Fatal/${shortdate}.log"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}" />
@@ -79,16 +79,16 @@
 	<rules>
 		<logger name="*" minlevel="Trace" writeTo="all" />
 		<logger name="*" minlevel="Trace" maxlevel="Trace" writeTo="trace" />
-    <logger name="*" minlevel="Trace" maxlevel="Trace" writeTo="traceConsole" />
+		<logger name="*" minlevel="Trace" maxlevel="Trace" writeTo="traceConsole" />
 		<logger name="*" minlevel="Debug" maxlevel="Debug" writeTo="debug" />
-    <logger name="*" minlevel="Debug" maxlevel="Debug" writeTo="debugConsole" />
+		<logger name="*" minlevel="Debug" maxlevel="Debug" writeTo="debugConsole" />
 		<logger name="*" minlevel="Info" maxlevel="Info" writeTo="info" />
-    <logger name="*" minlevel="Info" maxlevel="Info" writeTo="infoConsole" />
-    <logger name="*" minlevel="Warn" maxlevel="Warn" writeTo="warn" />
+		<logger name="*" minlevel="Info" maxlevel="Info" writeTo="infoConsole" />
+		<logger name="*" minlevel="Warn" maxlevel="Warn" writeTo="warn" />
 		<logger name="*" minlevel="Warn" maxlevel="Warn" writeTo="warnConsole" />
 		<logger name="*" minlevel="Error" maxlevel="Error" writeTo="error" />
 		<logger name="*" minlevel="Error" maxlevel="Error" writeTo="errorConsole" />
-    <logger name="*" minlevel="Fatal" maxlevel="Fatal" writeTo="fatal" />
+		<logger name="*" minlevel="Fatal" maxlevel="Fatal" writeTo="fatal" />
 		<logger name="*" minlevel="Fatal" maxlevel="Fatal" writeTo="fatalConsole" />
 	</rules>
 </nlog>
