--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="NLog" Version="4.5.4" />
     <PackageReference Include="protobuf-net" Version="2.3.8-alpha1" />
     <PackageReference Include="SharpZipLib" Version="1.0.0-alpha2" />
