1.服务端消息放到Model层 2.消除protobuf消息内部包含class类型跟repeated class类型的GC，使用了MessagePool来创建跟回收消息

--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Base\Object\Object.cs" />
     <Compile Include="Base\Object\EventSystem.cs" />
     <Compile Include="Base\Object\ObjectPool.cs" />
+    <Compile Include="Module\Message\MessagePool.cs" />
     <Compile Include="Module\Message\SessionComponent.cs" />
     <Compile Include="Module\Message\Session.cs" />
     <Compile Include="Module\UI\IUIFactory.cs" />
