demo使用websocket成功运行，测试方法: 1.服务端启动配置使用LocalServerWebsocket.txt， 2.NetOuterComponent.cs协议改成Websocket 3.Unity菜单tools全局配置改成ws://127.0.0.1:8080

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -23,6 +23,12 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Module\Message\NetOuterComponent.cs">
       <Link>Module\Message\NetOuterComponent.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Module\Message\Network\WebSocket\WChannel.cs">
+      <Link>Module\Message\Network\WebSocket\WChannel.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Module\Message\Network\WebSocket\WService.cs">
+      <Link>Module\Message\Network\WebSocket\WService.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Hotfix\Module\Message\MessagePool.cs">
       <Link>Module\Message\MessagePool\ETHotfix\MessagePool.cs</Link>
     </Compile>
