tcp改成下一次update再写入缓冲区,减少系统sendasync调用

--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -12,16 +12,13 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.4.9f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
@@ -381,9 +378,6 @@
     <Compile Include="Assets\Scripts\Module\FrameSync\UnitComponent.cs" />
     <Compile Include="Assets\Scripts\Module\FrameSync\UnitFactory.cs" />
     <Compile Include="Assets\Scripts\Module\Message\AMHandler.cs" />
-    <Compile Include="Assets\Scripts\Module\Message\Network\WebSocket\WChannel.cs" />
-    <Compile Include="Assets\Scripts\Module\Message\Network\WebSocket\WService.cs" />
-    <Compile Include="Assets\Scripts\Module\Message\OuterMessageDispatcher.cs" />
     <Compile Include="Assets\Scripts\Module\Message\ErrorCode.cs" />
     <Compile Include="Assets\Scripts\Module\Message\IActorMessage.cs" />
     <Compile Include="Assets\Scripts\Module\Message\IMessage.cs" />
@@ -408,11 +402,14 @@
     <Compile Include="Assets\Scripts\Module\Message\Network\TCP\PacketParser.cs" />
     <Compile Include="Assets\Scripts\Module\Message\Network\TCP\TChannel.cs" />
     <Compile Include="Assets\Scripts\Module\Message\Network\TCP\TService.cs" />
+    <Compile Include="Assets\Scripts\Module\Message\Network\WebSocket\WChannel.cs" />
+    <Compile Include="Assets\Scripts\Module\Message\Network\WebSocket\WService.cs" />
     <Compile Include="Assets\Scripts\Module\Message\NetworkComponent.cs" />
     <Compile Include="Assets\Scripts\Module\Message\Opcode.cs" />
     <Compile Include="Assets\Scripts\Module\Message\OpcodeHelper.cs" />
     <Compile Include="Assets\Scripts\Module\Message\OpcodeTypeComponent.cs" />
     <Compile Include="Assets\Scripts\Module\Message\OuterMessage.cs" />
+    <Compile Include="Assets\Scripts\Module\Message\OuterMessageDispatcher.cs" />
     <Compile Include="Assets\Scripts\Module\Message\OuterOpcode.cs" />
     <Compile Include="Assets\Scripts\Module\Message\ProtobufHelper.cs" />
     <Compile Include="Assets\Scripts\Module\Message\ProtobufPacker.cs" />
