--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Module\Config\ConfigHelper.cs" />
     <Compile Include="Module\Message\IActorMessage.cs" />
     <Compile Include="Module\Message\HotfixMessageDispatcher.cs" />
+    <Compile Include="Module\Message\IClientActorMessage.cs" />
     <Compile Include="Module\Message\IMessage.cs" />
     <Compile Include="Module\Message\AMHandler.cs" />
     <Compile Include="Module\Message\IMHandler.cs" />
